interpolation, event_sur_le_bouton

--- a/src/app/mon-premier/mon-premier.component.html
+++ b/src/app/mon-premier/mon-premier.component.html
@@ -5,3 +5,15 @@
         </h3>
     </div>
 </div>
+<div class="rows">
+    <div class="col-xm-12" id="bvn">
+        <h6>
+            faire ici vos tests d'appareils 
+        </h6>
+    </div>
+</div>
+<div class="rows">
+    <div class="col-xm-12" >
+        <h3><b>Liste des appareils</b></h3>
+    </div>
+</div>
