--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,20 @@
 <app-mon-premier></app-mon-premier>
+<div class="container">
+    <div class="rows">
+        <div class="col-xm-12">
+            <ul class="list-group">
+                <app-appareil></app-appareil>
+                <app-appareil></app-appareil>
+                <app-appareil></app-appareil>
+                <app-appareil></app-appareil>
+            </ul>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xm-4">
+            <button class="btn btn-success"  [disabled]="!isAuth" 
+             (click)= "onAllumer()">Tout alumer 
+            </button>
+        </div>
+    </div>
+</div>
