--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,10 @@
         <div class="col-xm-12">
             <ul class="list-group">
                 <app-appareil></app-appareil>
-               <app-appareil 
-                *ngFor = "let appareil of appareils"
-                [appareilName]="appareil.name" [apparaielStatus]="appareil.status"></app-appareil>
+              <app-appareil 
+              *ngFor = "let appareil of appareils"
+                [appareilName]="appareil.name"
+                [apparaielStatus]="appareil.status"></app-appareil>
             </ul> 
         </div>
     </div>
