--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,16 +4,16 @@
         <div class="col-xm-12">
             <ul class="list-group">
                 <app-appareil></app-appareil>
-                <app-appareil></app-appareil>
-                <app-appareil></app-appareil>
-            </ul>
+             
+            </ul> 
         </div>
-    </div> 
+    </div>
     <div class="row">
         <div class="col-xm-4">
-            <button class="btn btn-success" [disabled]="isAuth" 
+            <button class="btn btn-success"  [disabled]="isAuth" 
              (click)= "onAllumer()">Tout alumer 
             </button>
         </div>  
     </div>
+    <p>La date de mise à jour est : {{lastUdapte | date: 'short' | uppercase }}</p>
 </div>
